un cambio de forma

--- a/src/app/consulta-sitiosymercados/consulta-sitiosymercados.page.html
+++ b/src/app/consulta-sitiosymercados/consulta-sitiosymercados.page.html
@@ -25,7 +25,7 @@
   
     <ion-row>
       <ion-col>
-            <ion-select formControlName="tipositio" interface="action-sheet" id="miselect" cancelText="Cancelar">
+            <ion-select formControlName="tipositio" interface="action-sheet" id="miselect" cancelText="Cerrar este cuadro">
                 <ion-select-option value="0">Sitios</ion-select-option>
                 <ion-select-option value="1">Mercados</ion-select-option>
                 <ion-select-option value="2">Mercados Zonales</ion-select-option>
