--- a/src/app/consulta-buzonsugerencias/consulta-buzonsugerencias.page.html
+++ b/src/app/consulta-buzonsugerencias/consulta-buzonsugerencias.page.html
@@ -27,7 +27,7 @@
     <ion-row style="height: 1em;"></ion-row>
     <ion-label>Los campos marcados con <span class="asteriscorojo">*</span> son obligatorios</ion-label>
     <ion-row style="height: 1em;"></ion-row>
-    <ion-button (click)="enviasugerencia()" expand="block" color="tertiary" class="btn_enviar">
+    <ion-button expand="block" color="tertiary" class="btn_enviar">
         <ion-icon slot="start" name="mail"></ion-icon>
         ENVIAR
     </ion-button>
