--- a/src/app/xtramites/sub-alc/descrip-req/descrip-req.page.html
+++ b/src/app/xtramites/sub-alc/descrip-req/descrip-req.page.html
@@ -11,7 +11,7 @@
     PLATAFORMA VIRTUAL DE ATENCIÓN
     </div>
 </ion-header>
-<ion-content padding (ionScroll)="scrollFunction($event)">
+<ion-content padding>
     <div class="titulodesc">
         <span class="nrodesc">{{this.argumento+2}}</span>{{this.texto}}
       </div>
