--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
       <span>Toque aquí para empezar</span>
     </div>
     <video width="100%" height="100%" autoplay loop id="mivideo" poster="assets/escudo-cochabamba.jpg" muted> 
-        <source src="/assets/impresiontinta.mp4?{{aleatorio}}" type="video/mp4">
+        <source src="/assets/impresiontinta.mp4" type="video/mp4">
         <!-- <source src="movie.ogg" type="video/ogg"> -->
       Your browser does not support the video tag.
       </video>
